--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Half-Life 2 Rebuild</title>
-    <!-- Favicon using the Rebuild Logo -->
+    <!-- Favicon -->
     <link rel="icon" type="image/webp" href="https://media.discordapp.net/attachments/1464443523620409542/1464443588908679189/DADWADAWD_b.png?ex=69757cdf&is=69742b5f&hm=bd57e05581d676786bbc3aadf15aa6925322fceed22539673defaa480bc38389&">
     
     <script src="https://cdn.tailwindcss.com"></script>
