--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Half-Life 2 Rebuild</title>
     <!-- Favicon -->
-    <link rel="icon" type=".ico" href="rebuild_logo">
+    <link rel="icon" type="ico" href="rebuild_logo.ico">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -420,3 +420,4 @@
     </script>
 </body>
 </html>
+
