--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     </button>
                 </a>
                 
-                <a href="https://github.com/ValveSoftware/source-sdk-2013/tree/singleplayer" target="_blank" class="w-64 md:w-80">
+                <a href="https://gitlab.com/iniko_okin/r-source" target="_blank" class="w-64 md:w-80">
                     <button class="w-full py-3.5 rounded-full bg-[#24292e] text-white font-bold uppercase tracking-[0.15em] transition-all hover:bg-[#2f363d] active:scale-95 flex items-center justify-center gap-3">
                         <i class="fa-brands fa-github text-xl"></i>
                         Source Code
@@ -420,3 +420,4 @@
     </script>
 </body>
 </html>
+
